--- a/report/references.bib
+++ b/report/references.bib
@@ -4,3 +4,9 @@
   booktitle={Proceedings of the 6th International Conference on Learning Representations (ICLR)},
   year={2018}
 }
+
+@inproceedings{Calderbank2009CompressedL,
+  title={Compressed Learning : Universal Sparse Dimensionality Reduction and Learning in the Measurement Domain},
+  author={R. Calderbank},
+  year={2009}
+}
