--- a/report/references.bib
+++ b/report/references.bib
@@ -10,3 +10,65 @@
   author={R. Calderbank},
   year={2009}
 }
+
+@incollection{NIPS2013_5021,
+abstract = {The recently introduced continuous Skip-gram model is an efficient method for learning high-quality distributed vector representations that capture a large number of precise syntactic and semantic word relationships. In this paper we present several improvements that make the Skip-gram model more expressive and enable it to learn higher quality vectors more rapidly. We show that by subsampling frequent words we obtain significant speedup, and also learn higher quality representations as measured by our tasks. We also introduce Negative Sampling, a simplified variant of Noise Contrastive Estimation (NCE) that learns more accurate vectors for frequent words compared to the hierarchical softmax. An inherent limitation of word representations is their indifference to word order and their inability to represent idiomatic phrases. For example, the meanings of Canada'' and "Air'' cannot be easily combined to obtain "Air Canada''. Motivated by this example, we present a simple and efficient method for finding phrases, and show that their vector representations can be accurately learned by the Skip-gram model. "},
+author = {Mikolov, Tomas and Sutskever, Ilya and Chen, Kai and Corrado, Greg S and Dean, Jeff},
+booktitle = {Advances in Neural Information Processing Systems 26},
+editor = {Burges, C J C and Bottou, L and Welling, M and Ghahramani, Z and Weinberger, K Q},
+file = {:Users/salome/Library/Application Support/Mendeley Desktop/Downloaded/Mikolov et al. - 2013 - Distributed Representations of Words and Phrases and their Compositionality.pdf:pdf},
+mendeley-groups = {NLP/Embeddings/Word2Vec},
+pages = {3111--3119},
+publisher = {Curran Associates, Inc.},
+title = {{Distributed Representations of Words and Phrases and their Compositionality}},
+url = {http://papers.nips.cc/paper/5021-distributed-representations-of-words-and-phrases-and-their-compositionality.pdf},
+year = {2013}
+}
+@article{Mikolov2013,
+abstract = {We propose two novel model architectures for computing continuous vector representations of words from very large data sets. The quality of these representations is measured in a word similarity task, and the results are compared to the previously best performing techniques based on different types of neural networks. We observe large improvements in accuracy at much lower computational cost, i.e. it takes less than a day to learn high quality word vectors from a 1.6 billion words data set. Furthermore, we show that these vectors provide state-of-the-art performance on our test set for measuring syntactic and semantic word similarities.},
+archivePrefix = {arXiv},
+arxivId = {1301.3781},
+author = {Mikolov, Tomas and Chen, Kai and Corrado, Greg and Dean, Jeffrey},
+doi = {10.1162/153244303322533223},
+eprint = {1301.3781},
+file = {:Users/salome/Library/Application Support/Mendeley Desktop/Downloaded/Mikolov et al. - 2013 - Efficient Estimation of Word Representations in Vector Space.pdf:pdf},
+isbn = {1532-4435},
+issn = {15324435},
+mendeley-groups = {NLP,NLP/Embeddings/Word2Vec},
+pages = {1--12},
+pmid = {18244602},
+title = {{Efficient Estimation of Word Representations in Vector Space}},
+url = {http://arxiv.org/abs/1301.3781},
+year = {2013}
+}
+
+
+@article{Peters_2018,
+   title={Deep Contextualized Word Representations},
+   url={http://dx.doi.org/10.18653/v1/N18-1202},
+   DOI={10.18653/v1/n18-1202},
+   journal={Proceedings of the 2018 Conference of the North American Chapter of
+          the Association for Computational Linguistics: Human Language
+          Technologies, Volume 1 (Long Papers)},
+   publisher={Association for Computational Linguistics},
+   author={Peters, Matthew and Neumann, Mark and Iyyer, Mohit and Gardner, Matt and Clark, Christopher and Lee, Kenton and Zettlemoyer, Luke},
+   year={2018}
+}
+
+
+@misc{howard2018universal,
+    title={Universal Language Model Fine-tuning for Text Classification},
+    author={Jeremy Howard and Sebastian Ruder},
+    year={2018},
+    eprint={1801.06146},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL}
+}
+@misc{devlin2018bert,
+    title={BERT: Pre-training of Deep Bidirectional Transformers for Language Understanding},
+    author={Jacob Devlin and Ming-Wei Chang and Kenton Lee and Kristina Toutanova},
+    year={2018},
+    eprint={1810.04805},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL}
+}
