--- a/report/references.bib
+++ b/report/references.bib
@@ -91,3 +91,13 @@ year = {2013}
  publisher = {MIT Press},
  address = {Cambridge, MA, USA},
 } 
+
+@article{Lample_2016,
+   title={Neural Architectures for Named Entity Recognition},
+   url={http://dx.doi.org/10.18653/v1/N16-1030},
+   DOI={10.18653/v1/n16-1030},
+   journal={Proceedings of the 2016 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies},
+   publisher={Association for Computational Linguistics},
+   author={Lample, Guillaume and Ballesteros, Miguel and Subramanian, Sandeep and Kawakami, Kazuya and Dyer, Chris},
+   year={2016}
+}
