--- a/report/report_template.tex
+++ b/report/report_template.tex
@@ -492,7 +492,23 @@ sequential nature.
 \subsection{Why text embeddings? }
 
 
-
+Now that we have presented text embedding, we can present some of 
+their most well-known applications. As text embeddings 
+are a general, abstract, numerical representation for texts, 
+they serve in many NLP tasks : text classification, and 
+more specifically sentiment analysis (is a product review positive, 
+negative, or neutral?), text similarity analysis, but 
+also information retrieval. In information retrieval (IR), 
+a common problem is to find the most relevant documents 
+regarding a query. In classic IR systems, documents are compared 
+with queries through co-occurence matrices, or through TF-IDF, 
+which is commonly used in tech as it i a central part in 
+Lucene and ElasticSearch algorithms. However, modern IR 
+systems focuss on finding document and queries embeddings, 
+in order to match the two by comparing them in a common 
+latent space. Thus, text embeddings are useful in many 
+machine learning tasks, but also in information retrieval 
+problems. 
 
 \newpage
 \section{Text embedding as a Compressed Sensing problem}
